Fix ktlint, disable psiminer